--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container">
     <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-4 offset-md-4 mt-5">
     
         <form action="/tasks/create/" method="POST" class="card card-body">
             <h1>Create Task</h1>
