--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -9,7 +9,14 @@
         <form action="/signup/" method="POST" class="card card-body mt-5">
             <h1 class="text-center">Signub</h1>
         
-            {{error}}
+
+            {% if error %}
+            <div class="alert alert-danger" role="alert">
+                {{error}}
+
+            </div>
+            {% endif %}
+
             {% csrf_token %}
 
             <div class="mb-3">
@@ -25,7 +32,7 @@
                 <input type="password" name="password2" class="form-control" placeholder="Confirma Tu Contraseña" id="password2">
             </div>
         
-            <button class="btn btn-primary">
+            <button class="btn btn-primary">n  
                 Signup
             </button>
         </form>
