--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -2,30 +2,39 @@
 
 {% block content %}
 
-    <h1>{{task.title}}</h1>
+<main class="container">
+    <div class="col-md-4 offset-md-4">
+        
+        <h1 class="text-secondary">{{task.title}}</h1>
 
-    {{error}}
+        {{error}}
 
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>
-            Update
-        </button>
-    </form>
+        <div class="d-flex justify-content-between">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary" type="submit">
+                    Update
+                </button>
+            </form>
+        </div>
 
-    <form action="{% url 'complete_task' task.id %}" method="POST">
-        {% csrf_token %}
-        <button>
-            Complete
-        </button>
-    </form>
-
-    <form action="{% url 'delete_task' task.id %}" method="POST">
-        {% csrf_token %}
-        <button>
-            Delete
-        </button>
-    </form>
+        <div class="d-flex justify-content-between mt-3">
+            <form action="{% url 'complete_task' task.id %}" method="POST">
+                {% csrf_token %}
+                <button class="btn btn-secondary" type="submit">
+                    Complete
+                </button>
+            </form>
+    
+            <form action="{% url 'delete_task' task.id %}" method="POST">
+                {% csrf_token %}
+                <button class="btn btn-danger" type="submit">
+                    Delete
+                </button>
+            </form>
+        </div>
+    </div>
+</main>
 
 {% endblock %}
