cambio de idioma

--- a/tasks/templates/home.html
+++ b/tasks/templates/home.html
@@ -29,10 +29,10 @@ Ya sea que estés organizando tu trabajo, estudios o vida cotidiana, TareasApp e
         </p>
         <div class="text-center">
             <a class="btn btn-secondary" href="/signin/">
-                Singnin
+                 Ingresar
             </a>
             <a class="btn btn-dark" href="/signup/">
-                Singnup
+                Registrarse
             </a>
         </div>
     </section>
