--- a/tasks/templates/signin.html
+++ b/tasks/templates/signin.html
@@ -14,7 +14,7 @@
         
                 {% csrf_token %}
                 
-                <h1 class="text-center">Signin</h1>
+                <h1 class="text-center">Iniciar Cesion </h1>
                     
                         {{error}}
                         {% csrf_token %}
@@ -30,7 +30,7 @@
                     
                     
                         <button class="btn btn-primary">
-                            Signin
+                            Ingresar
                         </button>
             </form>
         </section>
