--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -7,7 +7,7 @@
    <div class="row">
     <div class="col-md-4 offset-md-4">
         <form action="/signup/" method="POST" class="card card-body mt-5">
-            <h1 class="text-center">Signub</h1>
+            <h1 class="text-center">Regístrese</h1>
         
 
             {% if error %}
@@ -33,7 +33,7 @@
             </div>
         
             <button class="btn btn-primary">n  
-                Signup
+                Regístrese
             </button>
         </form>
     </div>
