--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -18,29 +18,29 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="/" class="nav-link">Home</a>
+                    <a href="/" class="nav-link">Inicio</a>
                 </li>
                
                 {% if user.is_authenticated %}
     
                 <li class="nav-item">
-                    <a href="{% url 'tasks' %}" class="nav-link">tasks Pending</a>
+                    <a href="{% url 'tasks' %}" class="nav-link">Tareas Pendientes </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'tasks_completed' %}" class="nav-link">tasks Completed</a>
+                    <a href="{% url 'tasks_completed' %}" class="nav-link">Tareas Completas </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/tasks/create/" class="nav-link">Create task</a>
+                    <a href="/tasks/create/" class="nav-link">Crear Tareas</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/logout " class="nav-link">Logout</a>
+                    <a href="/logout " class="nav-link">Cerrar Sesíon</a>
                 </li>
                 {% else%}
                 <li class="nav-item">
-                    <a href="/signup" class="nav-link">Signup</a>
+                    <a href="/signup" class="nav-link">Registrese</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/signin" class="nav-link">Signin</a>
+                    <a href="/signin" class="nav-link">Ingrese </a>
                 </li>
                 {% endif %}
             </ul>
