--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -6,13 +6,13 @@
     <div class="col-md-4 offset-md-4 mt-5">
     
         <form action="/tasks/create/" method="POST" class="card card-body">
-            <h1>Create Task</h1>
+            <h1>Crear tarea</h1>
     
             {{error}}
             {% csrf_token %}
             {{form.as_p}}
             <button class="btn btn-primary">
-                Save
+                Guardar 
             </button>
     
         </form>
