--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button class="btn btn-primary" type="submit">
-                    Update
+                    Actualizar
                 </button>
             </form>
         </div>
@@ -23,14 +23,14 @@
             <form action="{% url 'complete_task' task.id %}" method="POST">
                 {% csrf_token %}
                 <button class="btn btn-secondary" type="submit">
-                    Complete
+                    Completar
                 </button>
             </form>
     
             <form action="{% url 'delete_task' task.id %}" method="POST">
                 {% csrf_token %}
                 <button class="btn btn-danger" type="submit">
-                    Delete
+                    Eliminar
                 </button>
             </form>
         </div>
